--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,1 +1,11 @@
-<p class="site-intro">Hello, this is TextLog - another minimalist Jekyll theme by Heiswayi Nrird. TextLog provides distraction-free and content-focused layout. This section is here for any brief introduction. You may edit this section in <code>includes\intro.html</code>. If you use this theme as a personal blog, maybe this section works best for you bio...</p>
+<p class="site-intro">Here I write about things I am interested in.</p>
+</br>
+</br>
+<p class="site-intro">
+  Generally about Computer Science.
+</p>
+</br>
+</br>
+<p class="site-intro">
+  Here you will face some little and interesting project on which I wasted time
+</p>
