--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,4 @@
-<p class="site-intro">Here I write about things I am interested in.</p>
-<p class="site-intro">
-  Generally about Computer Science.
-</p>
-<p class="site-intro">
-  Here you will face some little and interesting project on which I wasted time
+<p class="site-intro">Here I write about things I am interested in.
+	Generally about Computer Science.
+	Here you will face some little and interesting project on which I wasted time
 </p>
