--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,5 +3,5 @@
   Generally about Computer Science.
 </p>
 <p class="site-intro">
-  Here you will face some little and interesting project on which I wasted time
+  Here you will face some little and interesting projects on which I wasted time
 </p>
