--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,1 @@
-<p class="site-nav"><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About author</a> / <a href="{{ '/gifs' | prepend: site.baseurl | prepend: site.url }}">gifs</a> / <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">contactme</a>
+<p class="site-nav"><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">aboutauthor</a> / <a href="{{ '/gifs' | prepend: site.baseurl | prepend: site.url }}">gifs</a> / <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">contactme</a>
