--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,16 +17,16 @@ ol,
 p,
 pre,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 /**
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-    color: $text-color;
-    background-color: $background-color;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+  color: $text-color;
+  background-color: $background-color;
 }
 /**
  * Set `margin-bottom` to maintain vertical rhythm
@@ -46,38 +46,38 @@ p,
 pre,
 table,
 ul {
-    margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit / 2;
 }
 /**
  * Images
  */
 img {
-    max-width: 100%;
-    vertical-align: middle;
+  max-width: 100%;
+  vertical-align: middle;
 }
 /**
  * Figures
  */
 figure > img {
-    display: block;
+  display: block;
 }
 
 figcaption {
-    font-size: $small-font-size;
+  font-size: $small-font-size;
 }
 /**
  * Lists
  */
 ol,
 ul {
-    margin-left: $spacing-unit;
+  margin-left: $spacing-unit;
 }
 
 li {
-     > ol,
-    > ul {
-        margin-bottom: 0;
-    }
+  > ol,
+  > ul {
+    margin-bottom: 0;
+  }
 }
 /**
  * Headings
@@ -88,102 +88,102 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: $base-font-weight;
+  font-weight: $base-font-weight;
 }
 /**
  * Links
  */
 a {
-    color: $link-color;
-    text-decoration: none;
+  color: $link-color;
+  text-decoration: none;
 
-    &:hover {
-        text-decoration: underline;
-    }
+  &:hover {
+    text-decoration: underline;
+  }
 }
 /**
  * Blockquotes
  */
 blockquote {
-    color: $grey-color-dark;
-    padding-left: $spacing-unit / 2;
-    border-left: 2px solid $grey-color-light;
-    font-style: italic;
-    font-size: $small-font-size;
+  color: $grey-color-dark;
+  padding-left: $spacing-unit / 2;
+  border-left: 2px solid $grey-color-light;
+  font-style: italic;
+  font-size: $small-font-size;
 
-    > :last-child {
-        margin-bottom: 0;
-    }
+  > :last-child {
+    margin-bottom: 0;
+  }
 }
 /**
  * Code formatting
  */
 code,
 pre {
-    background-color: #fcfcfc;
+  background-color: #fcfcfc;
 }
 
 code {
-    padding: 1px 5px;
-    font-family: $code-font-family;
-    color: #f14e32;
+  padding: 1px 5px;
+  font-family: $code-font-family;
+  color: #f14e32;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: auto;
-    border-left: 2px solid $grey-color-light;
+  padding: 8px 12px;
+  overflow-x: auto;
+  border-left: 2px solid $grey-color-light;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-        tab-size: 4;
-        color: inherit;
-    }
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+    tab-size: 4;
+    color: inherit;
+  }
 }
 /**
  * Table
  */
 table {
-    width: 100%;
-    max-width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    table-layout: fixed;
+  width: 100%;
+  max-width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  table-layout: fixed;
 }
 
 td,
 th {
-    padding: 0.5rem;
-    line-height: inherit;
+  padding: 0.5rem;
+  line-height: inherit;
 }
 
 th {
-    text-align: left;
-    vertical-align: bottom;
-    border-bottom: 2px solid $grey-color-light;
+  text-align: left;
+  vertical-align: bottom;
+  border-bottom: 2px solid $grey-color-light;
 }
 
 td {
-    vertical-align: top;
-    border-bottom: 1px solid $grey-color-light;
+  vertical-align: top;
+  border-bottom: 1px solid $grey-color-light;
 }
 /**
  * Horizontal rule
  */
 hr {
-    border: none;
-    border-top: 1px solid lighten($grey-color, 30%);
-    margin: $spacing-unit auto;
+  border: none;
+  border-top: 1px solid lighten($grey-color, 30%);
+  margin: $spacing-unit auto;
 }
 /**
  * Clearfix
  */
 %clearfix {
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
+  &:after {
+    content: '';
+    display: table;
+    clear: both;
+  }
 }
