--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,131 +2,132 @@
  * Site header
  */
 .site-header {
-    border-bottom: 1px solid $grey-color-light;
-    margin-top: -2rem;
-    max-width: $max-width;
-    p {
-      font-size: $small-font-size;
-    }
+  border-bottom: 1px solid $grey-color-light;
+  margin-top: -2rem;
+  max-width: $max-width;
+  p {
+    font-size: $small-font-size;
+  }
 }
 
 .smallcap {
-    //text-transform: lowercase;
-    //font-variant: small-caps;
-    font-size: 1.5rem;
-    font-weight: bold;
+  //text-transform: lowercase;
+  //font-variant: small-caps;
+  font-size: 1.5rem;
+  font-weight: bold;
 
-    a,
-    a:hover {
-        text-decoration: none;
-        letter-spacing: 2px;
-        background-color: #333;
-        color: #eee;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
-        padding-top: 0.2rem;
-        padding-bottom: 0.2rem;
-    }
+  a,
+  a:hover {
+    text-decoration: none;
+    letter-spacing: 2px;
+    background-color: #333;
+    color: #eee;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+  }
 }
 /**
  * Page content
  */
 .page-content {
-    position: relative;
-    padding: $spacing-unit ($spacing-unit * 0.75);
-    margin: 1rem;
-    box-sizing: border-box;
-    max-width: $max-width;
+  position: relative;
+  padding: $spacing-unit ($spacing-unit * 0.75);
+  margin: 1rem;
+  box-sizing: border-box;
+  max-width: $max-width;
 }
 /**
  * Pages
  */
 .home {
-    section + section {
-        margin-top: $spacing-unit;
-        max-width: $max-width;
-    }
+  section + section {
+    margin-top: $spacing-unit;
+    max-width: $max-width;
+  }
 }
 
 .post-list > li {
-    margin-bottom: $spacing-unit / 4;
-    list-style-type: none;
-    margin-left: -2rem;
+  margin-bottom: $spacing-unit / 4;
+  list-style-type: none;
+  margin-left: -2rem;
 
-    a,
-    a:hover {
-        color: $text-color;
-        font-weight: bold;
-        text-decoration: none;
-    }
+  a,
+  a:hover {
+    color: $text-color;
+    font-weight: bold;
+    text-decoration: none;
+  }
 
+  time {
+    font-size: $small-font-size;
+    color: $grey-color;
+  }
+  @include media-query($on-palm) {
     time {
-        font-size: $small-font-size;
-        color: $grey-color;
+      display: block;
+      font-size: $small-font-size;
     }
-    @include media-query($on-palm) {
-        time {
-            display: block;
-            font-size: $small-font-size;
-        }
-    }
+  }
 }
 
 .tag-title {
-    color: $link-color;
+  color: $link-color;
 }
 /**
  * Posts
  */
 .post-header {
-    margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 }
 
 .post-title {
-    font-size: 2rem;
-    letter-spacing: -1px;
-    line-height: 1.2;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
+  font-size: 2rem;
+  letter-spacing: -1px;
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
 }
 
 .post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-    a, a:visited {
-      color: $grey-color-dark;
-    }
+  font-size: $small-font-size;
+  color: $grey-color;
+  a,
+  a:visited {
+    color: $grey-color-dark;
+  }
 }
 
 .post-content {
-    margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin-top: 2rem;
-    }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 2rem;
+  }
 
-    h1,
-    h2 {
-        font-size: 2rem;
-    }
+  h1,
+  h2 {
+    font-size: 2rem;
+  }
 
-    h3 {
-        font-size: 1.5rem;
-    }
+  h3 {
+    font-size: 1.5rem;
+  }
 
-    h4 {
-        font-size: 1.25rem;
-    }
+  h4 {
+    font-size: 1.25rem;
+  }
 
-    h5,
-    h6 {
-        font-size: 1rem;
-    }
+  h5,
+  h6 {
+    font-size: 1rem;
+  }
 }
 
 .copyright {
@@ -134,7 +135,8 @@
   font-size: $small-font-size;
   p {
     color: $grey-color;
-    a, a:visited {
+    a,
+    a:visited {
       color: $grey-color-dark;
     }
   }
