--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,6 @@
 <p class="site-nav"><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">aboutauthor</a> / <a href="{{site.baseurl}}/my-writings.html">mywritings</a> / <a href="https://github.com/goodot/fuzzy-dm">fuzzy-dm</a>/ <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">contactme</a>
+  
+<ul style="list-style-type:square">
+   <li><a href="https://www.linkedin.com/in/goderdzi-jobadze-441886152/">Linkedin</a></li>
+</ul>
+</p>
