--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,13 @@
-<p class="site-nav"><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">aboutauthor</a> / <a href="{{site.baseurl}}/my-writings.html">mywritings</a> / <a href="https://github.com/goodot/fuzzy-dm">fuzzy-dm</a>/ <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">contactme</a>
-  
 <ul style="list-style-type:square">
-   <li><a href="https://www.linkedin.com/in/goderdzi-jobadze-441886152/">Linkedin</a></li>
+    <li><a href="https://www.linkedin.com/in/goderdzi-jobadze-441886152/">Linkedin</a></li>
+    <li><a href="https://github.com/goodot">Github</a></li>
+    <li><a href="https://stackoverflow.com/users/3179389/godot">StackOverflow</a></li>
+    <li><a href="https://www.kaggle.com/goodot">Kaggle</a></li>
+  
+</ul>
+<ul style="list-style-type:square">
+    <li><a href="https://www.codewars.com/users/goodot">CodeWars</a></li>
+    <li><a href="https://www.hackerrank.com/godo72310">Hackerrank</a></li>
+  
 </ul>
 </p>
